<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kosuk_000.sampleandroidtodoapp.EntryActivity">

    <TextView
        android:text="@string/todo_entry_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/todo_desc"
        android:textAppearance="?android:attr/textAppearanceLarge"/>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/todo_linear_layout"
        android:layout_below="@+id/todo_desc">

        <TextView
            android:text="@string/todo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/todo_title"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/entry_todo_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_content"
            android:id="@+id/todo_content"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/entry_todo_content"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/todo_linear_layout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_entry"
            android:id="@+id/btn_entry" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_to_main"
            android:text="@string/btn_to_main"/>

    </LinearLayout>

</RelativeLayout>
